Fixed: Some UI quirks... Not perfect yet, but everything is readable

--- a/web2/css/style.css
+++ b/web2/css/style.css
@@ -4,6 +4,26 @@
     height: 200px;
 }
 
+#scoreSign {
+    width: 70%;
+    min-width: 400px;
+    float: left;
+}
+#navBar {
+    width: 25%;
+    min-width: 300px;
+    float: left;
+}
+#introContainer {
+    width: 100%;
+    float: left;
+}
+
+.border {
+    border-style:solid;
+    border-width:5px;
+}
+
 .taskMoreLink {
     color: black;
     text-decoration: none;
@@ -38,6 +58,8 @@
 }
 @media all and (max-width: 849px) {
   .category {
+    width: 100%;
+    float: left;
     padding-bottom: 20px;
   }
 }
